--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ keywords = ["configuration", "arguments", "environment", "codegen"]
 categories = ["command-line-interface", "config", "encoding"]
 license = "MITNFA"
 maintenance = { status = "experimental" }
+build = "build.rs"
 
 [dependencies]
 serde = "1"
