Implemented printing of help messages.
This change adds another variant to the ArgParseError signifying that
--help or -h argument was passed and carrying the name of the program.
By `Display`-ing the error, help message is shown.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ build = "build.rs"
 serde = "1"
 serde_derive = "1"
 toml = "=0.4.5"
+unicode-segmentation = "1.2"
 
 [dev-dependencies]
 pretty_assertions = "0.5.1"
