Major architecture redesign - version 0.3.0
This changes the architecture of `configure_me` to use two crates - one
for codegen, called `configure_me_codegen` from now and a new
`configure_me`, which serves as a prelude/facade.

This combined with other changes (e.g. `include_config!()` macro) allows
us to shrink boilerplate greatly. The crate using it is much easier to
setup and maintain.

Further, this crate replaces `FromStr` with `ParseArg`, which allows
using `PathBuf` and `OsString` types, thus allowing to work with
weirdly-encoded paths. In the future, it'll be possible to implement
even nicer error messages. Finally, conversion to `String` avoids
allocation.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,22 +1,2 @@
-[package]
-name = "configure_me"
-version = "0.2.3"
-authors = ["Martin Habovštiak <martin.habovstiak@gmail.com>"]
-description = "A library for processing application configuration easily."
-homepage = "https://github.com/Kixunil/configure_me"
-repository = "https://github.com/Kixunil/configure_me"
-readme = "README.md"
-keywords = ["configuration", "arguments", "environment", "codegen"]
-categories = ["command-line-interface", "config", "encoding"]
-license = "MITNFA"
-maintenance = { status = "experimental" }
-build = "build.rs"
-
-[dependencies]
-serde = "1"
-serde_derive = "1"
-toml = "=0.4.5"
-unicode-segmentation = "1.2"
-
-[dev-dependencies]
-pretty_assertions = "0.5.1"
+[workspace]
+members = ["configure_me", "configure_me_codegen"]
