--- a/configure_me_codegen/Cargo.toml
+++ b/configure_me_codegen/Cargo.toml
@@ -12,11 +12,17 @@ license = "MITNFA"
 maintenance = { status = "actively-maintained" }
 build = "build.rs"
 
+[features]
+default = ["man"]
+
 [dependencies]
 serde = "1"
 serde_derive = "1"
 toml = "0.4.8"
 unicode-segmentation = "1.2"
+fmt2io = "0.1"
+build-helper = "0.1.1"
+man = { version = "0.1", optional = true }
 
 [dev-dependencies]
 pretty_assertions = "0.5.1"
