--- a/configure_me_codegen/Cargo.toml
+++ b/configure_me_codegen/Cargo.toml
@@ -26,4 +26,4 @@ man = { version = "0.1.1", optional = true }
 
 [dev-dependencies]
 pretty_assertions = "0.5.1"
-configure_me = "0.3.2"
+configure_me = { version = "0.3.2", path = "../configure_me" }
