--- a/configure_me_codegen/Cargo.toml
+++ b/configure_me_codegen/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "configure_me_codegen"
-version = "0.3.11"
+version = "0.3.12"
 authors = ["Martin Habovštiak <martin.habovstiak@gmail.com>"]
 description = "A library for processing application configuration easily."
 homepage = "https://github.com/Kixunil/configure_me"
@@ -19,9 +19,10 @@ debconf = []
 serde = "1.0.101"
 serde_derive = "1.0.101"
 toml = "0.4.8"
+cargo_toml = "0.8.0"
 unicode-segmentation = "1.2"
 fmt2io = "0.1"
-build-helper = "0.1.1"
+void = "1"
 man = { version = "0.1.1", optional = true }
 
 [dev-dependencies]
