--- a/configure_me_codegen/Cargo.toml
+++ b/configure_me_codegen/Cargo.toml
@@ -2,7 +2,7 @@
 name = "configure_me_codegen"
 version = "0.4.0"
 authors = ["Martin Habovštiak <martin.habovstiak@gmail.com>"]
-description = "A library for processing application configuration easily."
+description = "A library for easy processing of application configuration from files, environment variables and command line arguments."
 homepage = "https://github.com/Kixunil/configure_me"
 repository = "https://github.com/Kixunil/configure_me"
 readme = "README.md"
