Drop `pretty_assertions` in favor of system `diff`
`pretty_assertions` is unusable for large inputs which is the case in
this project. System diff works fine so we just invoke that instead.

--- a/configure_me_codegen/Cargo.toml
+++ b/configure_me_codegen/Cargo.toml
@@ -27,5 +27,5 @@ void = "1"
 man = { version = "0.1.1", optional = true }
 
 [dev-dependencies]
-pretty_assertions = "0.5.1"
 configure_me = { version = "0.4.0", path = "../configure_me" }
+tempfile = "3.3.0"
