Beautiful error messages with `codespan-reporting`
One of the challenges of `configure_me` is its usage being less common.
Good error messages, among other things, can make development easier and
may help people understand `configure_me` better.

This makes several significant improvements of error messages:

* Uses `codespan-reporting` to report the exact places of root causes of
  errors - the messages look very similar to those of rustc!
* Doesn't stop after first validation error - if multiple errors can be
  detected and reported they are.
* Moves identifier validation out of deserialization to allow detecting
  other errors and print very detailed messages with hints.
* Treats `--help`/`-h` as reserved and reports it as such.
* Adds detection of duplicate short options - this was previously
  missing.
* Spanned messages don't just report the locations but also explain
  possibly less-obvious details - such as setting `default = true` in
  switch makes it inverted.
* Improves wording of some messages.

**New API and new style of build script**

`Error` has new methods `report` and `report_and_exit` that report the
error with colors to stderr. The latter one is intended for use in build
script inside `unwrap_or_else`:

```rust
fn main() {
    configure_me_codegen::build_script_auto()
        .unwrap_or_else(|error| error.report_and_exit());
}
```

The addition of `unwrap_or_else` is offset by removal of
`-> Result<...>`. Note that the existing build scripts still work, they
are just colorless.

--- a/configure_me_codegen/Cargo.toml
+++ b/configure_me_codegen/Cargo.toml
@@ -14,6 +14,7 @@ build = "build.rs"
 [features]
 default = ["man"]
 debconf = []
+spanned = ["codespan-reporting"]
 unstable-metabuild = []
 
 [dependencies]
@@ -25,6 +26,8 @@ unicode-segmentation = "1.2"
 fmt2io = "0.1"
 void = "1"
 man = { version = "0.1.1", optional = true }
+# This feature is not public! Do not depend on it, depend on `spanned` instead!
+codespan-reporting = { version = "0.11.1", optional = true }
 
 [dev-dependencies]
 configure_me = { version = "0.4.0", path = "../configure_me" }
