--- a/configure_me_codegen/Cargo.toml
+++ b/configure_me_codegen/Cargo.toml
@@ -21,7 +21,7 @@ unstable-metabuild = []
 serde = "1.0.101"
 serde_derive = "1.0.101"
 toml = "0.5.0"
-cargo_toml = "0.12.0"
+cargo_toml = ">= 0.13.0, < 0.21.0"
 unicode-segmentation = "1.2"
 fmt2io = "0.1"
 void = "1"
